tests/ui/reserved/reserved-become.rs
fn main() {
    let become = 0;
    //~^ ERROR expected identifier, found reserved keyword `become`
}

// ferrocene-annotations: fls_cbsgp6k0qa82
// Reserved Keywords
